@@ -1,20 +1,20 @@
-# $NetBSD: Makefile,v 1.3 2003/08/23 15:09:51 jschauma Exp $
+# $NetBSD: Makefile,v 1.4 2003/09/07 09:17:29 jdolecek Exp $
 #
 # NOTE: if you are depending on ant from another package, please be aware that
 # the ant team has CHANGED the version numbering scheme.  A previous version
 # of ant was 3.1.  Do NOT use dependency patterns such as >=1.3 which could pick
 # up this version by mistake.
 
-DISTNAME=	${PKGNAME:C/.([0-9])$/-\1/}-src
-PKGNAME=	apache-ant-1.5.3.1
-WRKSRC=		${WRKDIR}/${PKGNAME_NOREV:C/.([0-9])$/-\1/}
+DISTNAME=	${PKGNAME}-src
+PKGNAME=	apache-ant-1.5.4
+WRKSRC=		${WRKDIR}/${PKGNAME}
 CATEGORIES=	devel java
 MASTER_SITES=	${MASTER_SITE_APACHE:=ant/source/}
-EXTRACT_SUFX=	.zip
+EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	jwise@NetBSD.org
 HOMEPAGE=	http://ant.apache.org/
-COMMENT=	Apache Project's Java-Based make(1) replacement
+COMMENT=	"Apache Project's Java-Based make(1) replacement"
 
 DEPENDS+=	crimson>=1.1.3:../../textproc/crimson
 
